Replace main content with branch x but keep history